--- a/client/package.json
+++ b/client/package.json
@@ -1,42 +1,50 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "main": "index.js",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "^4.0.3",
-    "reactstrap": "^9.0.1",
-    "web-vitals": "^2.1.2"
-  },
-  "scripts": {
-    "start": "set PORT=3006 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "main": "index.js",
+    "dependencies": {
+        "@mui/icons-material": "^5.2.0",
+        "@popperjs/core": "^2.11.0",
+        "@testing-library/jest-dom": "^5.15.0",
+        "@testing-library/react": "^11.2.7",
+        "@testing-library/user-event": "^12.8.3",
+        "axios": "^0.24.0",
+        "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.7.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.0.2",
+        "react-scripts": "^4.0.3",
+        "react-viewerjs": "^0.1.9",
+        "reactstrap": "^9.0.1",
+        "sass": "^1.43.5",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^2.0.4",
+        "web-vitals": "^2.1.2"
+    },
+    "scripts": {
+        "start": "set PORT=3006 && react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
