--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
+# ES UN EJEMPLO Y LA CONFIGURACIÓN EN PRODUCCION DEBER SER DIFRENTE
 JWT_SECRET = jdhdhd-kjfjdhrhrerj-uurhr-jjge
 REFRESH_TOKEN_SECRET = fgkjddshfdjh773bdjsj84-jdjd774
 SESSION_EXPIRY = 60 * 15
