--- a/client/package.json
+++ b/client/package.json
@@ -12,18 +12,20 @@
         "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.7.2",
+        "connect-flash": "^0.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.0.2",
         "react-scripts": "^4.0.3",
+        "react-table": "^7.7.0",
         "react-viewerjs": "^0.1.9",
         "reactstrap": "^9.0.1",
         "sass": "^1.43.5",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.4",
-        "web-vitals": "^2.1.2",
-         "universal-cookie": "^4.0.4",
-         "connect-flash": "^0.1.1",
+        "styled-components": "^5.3.3",
+        "universal-cookie": "^4.0.4",
+        "web-vitals": "^2.1.2"
     },
     "scripts": {
         "start": "set PORT=3006 && react-scripts start",
@@ -49,6 +51,4 @@
             "last 1 safari version"
         ]
     }
-   
-    
 }
