--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
         "styled-components": "^5.3.3",
         "universal-cookie": "^4.0.4",
         "web-vitals": "^2.1.2", 
-        "firebase": "^9.6.0",
+        "firebase": "^9.6.0"
     },
     "scripts": {
         "start": "set PORT=3006 && react-scripts start",
